[gd_scene load_steps=7 format=3 uid="uid://bobb12psnciuk"]

[ext_resource type="Script" uid="uid://b6w65le2l8wnk" path="res://Scripts/chose_character.gd" id="1_hwby1"]
[ext_resource type="Theme" uid="uid://cf6o5io44h03f" path="res://Elemental Adventure theme.tres" id="1_si5xw"]
[ext_resource type="Texture2D" uid="uid://d3l2e26s0r3op" path="res://Sprites/Fire IDle.png" id="3_3s6gl"]
[ext_resource type="Texture2D" uid="uid://bhtn0asm5ij01" path="res://Sprites/water idle.png" id="4_ecjs8"]
[ext_resource type="Texture2D" uid="uid://dn2uwttahe5bw" path="res://Sprites/air idle.png" id="5_3j5dd"]
[ext_resource type="Texture2D" uid="uid://bff040cb4af36" path="res://Sprites/earth idle.png" id="6_eongy"]

[node name="Chose_Character" type="CanvasLayer"]
layer = 2
script = ExtResource("1_hwby1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_si5xw")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 144.0
grow_horizontal = 2
theme = ExtResource("1_si5xw")
text = "Chose the character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -112.0
offset_right = 208.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_si5xw")
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_si5xw")
theme_override_font_sizes/font_size = 50
text = "Exit
"

[node name="fire" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 376.0
offset_top = 208.0
offset_right = 634.0
offset_bottom = 466.0
theme = ExtResource("1_si5xw")
alignment = 1

[node name="FireIdle" type="TextureRect" parent="Panel/fire"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_3s6gl")

[node name="Button_fire" type="Button" parent="Panel/fire"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Press"

[node name="water" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 376.0
offset_top = -608.0
offset_right = 634.0
offset_bottom = -350.0
grow_vertical = 0
theme = ExtResource("1_si5xw")
alignment = 1

[node name="WaterIdle2" type="TextureRect" parent="Panel/water"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_ecjs8")

[node name="Button_water" type="Button" parent="Panel/water"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Press"

[node name="air" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -592.0
offset_right = -382.0
offset_bottom = -334.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("1_si5xw")
alignment = 1

[node name="AirIdle3" type="TextureRect" parent="Panel/air"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_3j5dd")

[node name="Button_air" type="Button" parent="Panel/air"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Press"

[node name="earth" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -640.0
offset_top = 208.0
offset_right = -382.0
offset_bottom = 466.0
grow_horizontal = 0
theme = ExtResource("1_si5xw")
alignment = 1

[node name="Earthidle4" type="TextureRect" parent="Panel/earth"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("6_eongy")

[node name="Button_earth" type="Button" parent="Panel/earth"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Press"

[connection signal="pressed" from="Panel/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Panel/fire/Button_fire" to="." method="_on_button_fire_pressed"]
[connection signal="pressed" from="Panel/water/Button_water" to="." method="_on_button_water_pressed"]
[connection signal="pressed" from="Panel/air/Button_air" to="." method="_on_button_air_pressed"]
[connection signal="pressed" from="Panel/earth/Button_earth" to="." method="_on_button_earth_pressed"]
